--- a/.github/workflows/deploy-oauth-proxy-server-to-cloud-run.yml
+++ b/.github/workflows/deploy-oauth-proxy-server-to-cloud-run.yml
@@ -88,7 +88,7 @@ jobs:
             --timeout=300
             --port=3000
             --cpu-boost
-            --startup-probe=timeoutSeconds=240,httpGet.port=3000,httpGet.path=/health,initialDelaySeconds=0,failureThreshold=1=initialDelaySeconds=0
+            --startup-probe=timeoutSeconds=240,httpGet.port=3000,httpGet.path=/health,initialDelaySeconds=0,failureThreshold=1,initialDelaySeconds=0
           env_vars: |
             NODE_ENV=${{ inputs.environment }}
             PORT=3000
