--- a/.github/workflows/deploy-oauth-proxy-server-to-cloud-run.yml
+++ b/.github/workflows/deploy-oauth-proxy-server-to-cloud-run.yml
@@ -4,11 +4,11 @@ on:
   workflow_call:
     inputs:
       environment:
-        description: "The environment to deploy to (dev or prod)"
+        description: "The environment to deploy to (development or production)"
         required: true
         type: string
       version:
-        description: "The version to deploy (commit SHA for dev, release version for prod)"
+        description: "The version to deploy (commit SHA for development, release version for production)"
         required: true
         type: string
       redirect_uri:
