fix: grant contents write permission to CI workflow for automated commits
- Change contents permission from 'read' to 'write' in on-pull-requests.yml
- Fixes 'Permission denied to github-actions[bot]' error
- Allows CI to push automated formatting and OpenAPI schema updates

--- a/.github/workflows/on-pull-requests.yml
+++ b/.github/workflows/on-pull-requests.yml
@@ -22,6 +22,6 @@ jobs:
   linting-and-tests:
     name: Linting and Tests
     permissions:
-      contents: read
+      contents: write  # Need write access to push automated fixes
       security-events: write
     uses: ./.github/workflows/linting-and-tests.yml
