--- a/desktop_app/package.json
+++ b/desktop_app/package.json
@@ -28,6 +28,8 @@
     "@electron-forge/plugin-vite": "^7.8.2",
     "@electron/fuses": "^1.8.0",
     "@types/electron-squirrel-startup": "^1.0.2",
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "electron": "37.2.5",
@@ -41,6 +43,8 @@
     "@types/express": "^5.0.3",
     "cors": "^2.8.5",
     "electron-squirrel-startup": "^1.0.1",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   }
 }
