--- a/desktop/package.json
+++ b/desktop/package.json
@@ -4,8 +4,12 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
+    "dev:desktop": "vite --mode desktop.dev",
+    "dev:web": "vite --mode web.local",
+    "build:desktop:dev": "tsc && vite build --mode desktop.dev",
+    "build:desktop:prod": "tsc && vite build --mode desktop.production",
+    "build:web:dev": "tsc && vite build --mode web.dev",
+    "build:web:prod": "tsc && vite build --mode web.production",
     "codegen": "openapi-ts",
     "preview": "vite preview",
     "tauri": "tauri",
@@ -70,6 +74,7 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.7.0",
+    "dotenv": "^17.2.1",
     "husky": "^9.1.7",
     "jsdom": "^26.1.0",
     "lint-staged": "^16.1.2",
