--- a/desktop/src-tauri/Cargo.toml
+++ b/desktop/src-tauri/Cargo.toml
@@ -57,8 +57,12 @@ once_cell = "1.21.3"
 tower-http = { version = "0.6", features = ["cors", "trace"] }
 ollama-rs = { version = "0.3.2", features = ["stream"] }
 tracing = "0.1.41"
-tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
+tauri-plugin-log = { version = "2.6.0", features = ["colored", "tracing"] }
+log = "0.4.27"
+fern = "0.7.1"
 strum = { version = "0.27.2", features = ["derive"] }
+tauri-plugin-localhost = "2.3.0"
+tauri-utils = "2.6.0"
 
 [dev-dependencies]
 tempfile = "3.8"
