--- a/desktop/.env.desktop.dev
+++ b/desktop/.env.desktop.dev
@@ -4,5 +4,4 @@ VITE_ARCHESTRA_GATEWAY_SERVER_BASE_URL=http://localhost:54587
 VITE_ARCHESTRA_WEBSOCKET_SERVER_URL=ws://localhost:54587/ws
 
 # Backend environment variables
-OAUTH_PROXY_BASE_URL=https://oauth.dev.archestra.ai
-TAURI_WINDOW_PORT=1420
+# OAUTH_PROXY_BASE_URL=https://oauth.dev.archestra.ai
