--- a/desktop/.env.desktop.production
+++ b/desktop/.env.desktop.production
@@ -4,4 +4,4 @@ VITE_ARCHESTRA_GATEWAY_SERVER_BASE_URL=http://localhost:54587
 VITE_ARCHESTRA_WEBSOCKET_SERVER_URL=ws://localhost:54587/ws
 
 # Backend environment variables
-OAUTH_PROXY_BASE_URL=https://oauth.archestra.ai
+# OAUTH_PROXY_BASE_URL=https://oauth.archestra.ai
