--- a/.github/workflows/on-pull-requests.yml
+++ b/.github/workflows/on-pull-requests.yml
@@ -22,6 +22,6 @@ jobs:
   linting-and-tests:
     name: Linting and Tests
     permissions:
-      contents: write  # Need write access to push automated fixes
+      contents: read
       security-events: write
     uses: ./.github/workflows/linting-and-tests.yml
