--- a/desktop_app/package.json
+++ b/desktop_app/package.json
@@ -26,20 +26,24 @@
     "@types/react-dom": "^19.1.7",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
+    "drizzle-kit": "^0.31.4",
     "electron": "37.2.5",
     "eslint": "^8.57.1",
     "eslint-plugin-import": "^2.32.0",
+    "tsx": "^4.20.3",
     "typescript": "~4.5.4",
     "vite": "^5.4.19"
   },
   "dependencies": {
     "@ai-sdk/openai": "^2.0.0",
     "@ai-sdk/react": "^2.0.0",
+    "@libsql/client": "^0.15.10",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "ai": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
+    "drizzle-orm": "^0.44.4",
     "electron-squirrel-startup": "^1.0.1",
     "express": "^5.1.0",
     "ollama-ai-provider": "^1.2.0",
