--- a/desktop_app/package.json
+++ b/desktop_app/package.json
@@ -21,6 +21,7 @@
     "@electron-forge/plugin-fuses": "^7.8.2",
     "@electron-forge/plugin-vite": "^7.8.2",
     "@electron/fuses": "^1.8.0",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/electron-squirrel-startup": "^1.0.2",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
@@ -37,10 +38,10 @@
   "dependencies": {
     "@ai-sdk/openai": "^2.0.0",
     "@ai-sdk/react": "^2.0.0",
-    "@libsql/client": "^0.15.10",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "ai": "^5.0.0",
+    "better-sqlite3": "^12.2.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.4",
