get prettier working

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Local Claude settings
+**/.claude/settings.local.json
+
 node_modules
 dist
 target
@@ -24,4 +27,3 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-.claude/settings.local.json
