remove `eslint` + add a few more relevant deps

--- a/desktop_app/package.json
+++ b/desktop_app/package.json
@@ -8,6 +8,8 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
+    "test": "vitest",
+    "prepare": "cd .. && husky desktop_app/.husky",
     "prettier": "prettier --write ."
   },
   "packageManager": "pnpm@10.13.1",
@@ -30,11 +32,14 @@
     "@types/react-dom": "^19.1.7",
     "drizzle-kit": "^0.31.4",
     "electron": "37.2.5",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.2",
     "prettier": "3.6.2",
     "tailwindcss": "^4.1.11",
     "tsx": "^4.20.3",
     "typescript": "~5.8.3",
-    "vite": "^7.0.6"
+    "vite": "^7.0.6",
+    "vitest": "^3.2.4"
   },
   "dependencies": {
     "@ai-sdk/openai": "^2.0.0",
@@ -63,5 +68,8 @@
     "onlyBuiltDependencies": [
       "electron"
     ]
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
   }
 }
