ci: basic `vitest` setup + CI

--- a/.github/actions/setup-env/action.yml
+++ b/.github/actions/setup-env/action.yml
@@ -1,4 +1,4 @@
-name: Setup frontend dependencies
+name: Setup node/pnpm + install frontend dependencies
 description: Setup node/pnpm + install frontend dependencies
 runs:
   using: composite
@@ -13,8 +13,8 @@ runs:
       with:
         node-version: "24.4.1"
         cache: "pnpm"
-        cache-dependency-path: desktop/pnpm-lock.yaml
+        cache-dependency-path: desktop_app/pnpm-lock.yaml
 
     - name: Install dependencies
       shell: bash
-      run: cd desktop && pnpm install --frozen-lockfile --prefer-offline
+      run: cd desktop_app && pnpm install --frozen-lockfile --prefer-offline
