chore: Configure drizzle studio

--- a/desktop_app/package.json
+++ b/desktop_app/package.json
@@ -101,6 +101,12 @@
   "pnpm": {
     "onlyBuiltDependencies": [
       "electron"
+    ],
+    "ignoredBuiltDependencies": [
+      "@tailwindcss/oxide",
+      "better-sqlite3",
+      "electron-winstaller",
+      "esbuild"
     ]
   },
   "lint-staged": {
