--- a/desktop_app/package.json
+++ b/desktop_app/package.json
@@ -49,6 +49,7 @@
     "@ai-sdk/anthropic": "^2.0.0",
     "@ai-sdk/openai": "^2.0.0",
     "@ai-sdk/react": "^2.0.0",
+    "@fastify/cors": "^11.1.0",
     "@hookform/resolvers": "^5.2.1",
     "@icons-pack/react-simple-icons": "^13.7.0",
     "@modelcontextprotocol/sdk": "^1.17.1",
@@ -69,18 +70,15 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@shikijs/transformers": "^3.9.1",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
     "@vitejs/plugin-react": "^4.7.0",
     "ai": "^5.0.0",
     "better-sqlite3": "^12.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.4",
     "electron-squirrel-startup": "^1.0.1",
-    "express": "^5.1.0",
+    "fastify": "^5.4.0",
     "index.js": "link:@modelcontextprotocol/sdk/client/index.js",
     "lucide-react": "^0.536.0",
     "ollama": "^0.5.16",
