chore: get final test passing

--- a/desktop_app/package.json
+++ b/desktop_app/package.json
@@ -100,11 +100,11 @@
   },
   "pnpm": {
     "onlyBuiltDependencies": [
-      "electron"
+      "electron",
+      "better-sqlite3"
     ],
     "ignoredBuiltDependencies": [
       "@tailwindcss/oxide",
-      "better-sqlite3",
       "electron-winstaller",
       "esbuild"
     ]
