--- a/desktop_app/package.json
+++ b/desktop_app/package.json
@@ -23,6 +23,7 @@
     "@electron-forge/plugin-fuses": "^7.8.2",
     "@electron-forge/plugin-vite": "^7.8.2",
     "@electron/fuses": "^2.0.0",
+    "@electron/rebuild": "^4.0.1",
     "@tailwindcss/vite": "^4.1.11",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
@@ -37,6 +38,7 @@
     "@types/react-dom": "^19.1.7",
     "drizzle-kit": "^0.31.4",
     "electron": "37.2.5",
+    "electron-rebuild": "^3.2.9",
     "husky": "^9.1.7",
     "jsdom": "^26.1.0",
     "lint-staged": "^16.1.2",
@@ -96,6 +98,7 @@
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.6",
     "zod": "^4.0.14",
+    "zod-to-json-schema": "^3.24.6",
     "zustand": "^5.0.7"
   },
   "pnpm": {
