--- a/desktop_app/package.json
+++ b/desktop_app/package.json
@@ -83,6 +83,7 @@
     "drizzle-orm": "^0.44.4",
     "electron-squirrel-startup": "^1.0.1",
     "fastify": "^5.4.0",
+    "get-port": "^7.1.0",
     "index.js": "link:@modelcontextprotocol/sdk/client/index.js",
     "lucide-react": "^0.536.0",
     "ollama": "^0.5.16",
