--- a/desktop_app/package.json
+++ b/desktop_app/package.json
@@ -60,6 +60,8 @@
     "@ai-sdk/react": "^2.0.0",
     "@fastify/cors": "^11.1.0",
     "@fastify/http-proxy": "^11.3.0",
+    "@fastify/swagger": "^9.5.1",
+    "@fastify/swagger-ui": "^5.2.3",
     "@fastify/websocket": "^11.2.0",
     "@hookform/resolvers": "^5.2.1",
     "@icons-pack/react-simple-icons": "^13.7.0",
@@ -91,6 +93,7 @@
     "drizzle-orm": "^0.44.4",
     "electron-squirrel-startup": "^1.0.1",
     "fastify": "^5.4.0",
+    "fastify-type-provider-zod": "^5.0.2",
     "get-port": "^7.1.0",
     "index.js": "link:@modelcontextprotocol/sdk/client/index.js",
     "lucide-react": "^0.536.0",
