--- a/desktop_app/package.json
+++ b/desktop_app/package.json
@@ -91,6 +91,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.4",
+    "drizzle-zod": "^0.8.2",
     "electron-squirrel-startup": "^1.0.1",
     "fastify": "^5.4.0",
     "fastify-type-provider-zod": "^5.0.2",
