--- a/desktop_app/package.json
+++ b/desktop_app/package.json
@@ -52,6 +52,7 @@
     "tsx": "^4.20.3",
     "typescript": "~5.9.2",
     "vite": "^7.0.6",
+    "vite-plugin-static-copy": "^3.1.1",
     "vitest": "^3.2.4"
   },
   "dependencies": {
