--- a/desktop_app/package.json
+++ b/desktop_app/package.json
@@ -52,17 +52,16 @@
     "tsx": "^4.20.3",
     "typescript": "~5.9.2",
     "vite": "^7.0.6",
-    "vite-plugin-static-copy": "^3.1.1",
     "vitest": "^3.2.4"
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^2.0.0",
     "@ai-sdk/openai": "^2.0.0",
     "@ai-sdk/react": "^2.0.0",
+    "@anatine/zod-openapi": "^2.2.8",
     "@fastify/cors": "^11.1.0",
     "@fastify/http-proxy": "^11.3.0",
     "@fastify/swagger": "^9.5.1",
-    "@fastify/swagger-ui": "^5.2.3",
     "@fastify/websocket": "^11.2.0",
     "@hookform/resolvers": "^5.2.1",
     "@icons-pack/react-simple-icons": "^13.7.0",
