--- a/.github/workflows/linting-and-tests.yml
+++ b/.github/workflows/linting-and-tests.yml
@@ -57,8 +57,8 @@ jobs:
         with:
           persist-credentials: true
 
-      - name: Setup frontend dependencies
-        uses: ./.github/actions/setup-frontend
+      - name: Setup environment
+        uses: ./.github/actions/setup-env
 
       - name: Codegen
         run: pnpm codegen:all
