chore: add colored logging

--- a/desktop_app/package.json
+++ b/desktop_app/package.json
@@ -4,7 +4,7 @@
   "description": "Archestra AI",
   "main": ".vite/build/main.js",
   "scripts": {
-    "start": "electron-forge start",
+    "start": "electron-forge start 2>&1 | pino-pretty  --single-line",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
@@ -50,6 +50,7 @@
     "husky": "^9.1.7",
     "jsdom": "^26.1.0",
     "lint-staged": "^16.1.2",
+    "pino-pretty": "^13.1.1",
     "prettier": "3.6.2",
     "tailwindcss": "^4.1.11",
     "tsx": "^4.20.3",
