--- a/.github/workflows/linting-and-tests.yml
+++ b/.github/workflows/linting-and-tests.yml
@@ -85,3 +85,11 @@ jobs:
 
       - name: Run zizmor 🌈
         uses: zizmorcore/zizmor-action@f52a838cfabf134edcbaa7c8b3677dde20045018 # v0.1.1
+
+  build-mcp-server-base-image:
+    name: Build MCP Server Base Docker Image
+    uses: ./.github/workflows/build-base-mcp-server-docker-image.yml
+    with:
+      push_to_gcr: false
+      version: ${{ github.sha }}
+    secrets: inherit
