--- a/.github/workflows/linting-and-tests.yml
+++ b/.github/workflows/linting-and-tests.yml
@@ -90,6 +90,9 @@ jobs:
     name: Build MCP Server Base Docker Image
     uses: ./.github/workflows/build-base-mcp-server-docker-image.yml
     with:
-      push_to_gcr: false
-      version: ${{ github.sha }}
+      # TODO: remove this when done testing
+      # push_to_gcr: false
+      # version: ${{ github.sha }}
+      push_to_gcr: true
+      version: 0.0.1
     secrets: inherit
