--- a/.github/workflows/linting-and-tests.yml
+++ b/.github/workflows/linting-and-tests.yml
@@ -88,6 +88,10 @@ jobs:
 
   build-mcp-server-base-image:
     name: Build MCP Server Base Docker Image
+    permissions:
+      contents: read
+      packages: write
+      id-token: write
     uses: ./.github/workflows/build-base-mcp-server-docker-image.yml
     with:
       # TODO: remove this when done testing
@@ -95,4 +99,7 @@ jobs:
       # version: ${{ github.sha }}
       push_to_gcr: true
       version: 0.0.1
-    secrets: inherit
+    # TODO: remove secrets when done testing
+    secrets:
+      GCP_SERVICE_ACCOUNT_NAME: ${{ secrets.DEVELOPMENT_OAUTH_PROXY_RELEASER_GCP_SERVICE_ACCOUNT_NAME }}
+      GCP_WORKLOAD_IDENTITY_PROVIDER_IDENTIFIER: ${{ secrets.DEVELOPMENT_OAUTH_PROXY_RELEASER_GCP_WORKLOAD_IDENTITY_PROVIDER_IDENTIFIER }}
