--- a/.github/workflows/build-base-mcp-server-docker-image.yml
+++ b/.github/workflows/build-base-mcp-server-docker-image.yml
@@ -18,7 +18,8 @@ on:
         required: false
 
 jobs:
-  build:
+  build-base-mcp-server-docker-image:
+    name: Build MCP Server Base Docker Image
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -26,13 +27,13 @@ jobs:
       # id-token: write
 
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           persist-credentials: false
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@c47758b77c9736f4b2ef4073d4d51994fabfe349 # v3.7.1
+        uses: docker/setup-buildx-action@e468171a9de216ec08956ac3ada2f0791b6bd435 # v3.11.1
 
       - name: Authenticate to Google Cloud
         if: inputs.push_to_gcr
@@ -43,7 +44,7 @@ jobs:
 
       - name: Set up Google Cloud
         if: inputs.push_to_gcr
-        uses: google-github-actions/setup-gcloud@7252237d1753f6304a1df72e928171a1a0be20f5 # v2.1.2
+        uses: google-github-actions/setup-gcloud@b7593ed2efd1c1617e1b0254da33b86225adb2a5 # v2.1.12
 
       - name: Configure Docker for Artifact Registry
         if: inputs.push_to_gcr
@@ -51,7 +52,7 @@ jobs:
           gcloud auth configure-docker europe-west1-docker.pkg.dev
 
       - name: Build Docker image
-        uses: docker/build-push-action@4f58ea79222b3b9dc2c8bbdd6debcef730109a75 # v6.9.0
+        uses: docker/build-push-action@263435318d21b8e681c14492fe198d362a7d2c83 # v6.18.0
         with:
           context: ./mcp_server_docker_image
           file: ./mcp_server_docker_image/Dockerfile
