--- a/.github/workflows/build-base-mcp-server-docker-image.yml
+++ b/.github/workflows/build-base-mcp-server-docker-image.yml
@@ -23,9 +23,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      # packages: write
-      # id-token: write
-
+      id-token: write # Required for Workload Identity Federation
     steps:
       - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
