--- a/.github/workflows/linting-and-tests.yml
+++ b/.github/workflows/linting-and-tests.yml
@@ -90,6 +90,7 @@ jobs:
     name: Build MCP Server Base Docker Image
     permissions:
       contents: read
+      id-token: write # Required for Workload Identity Federation
     uses: ./.github/workflows/build-base-mcp-server-docker-image.yml
     with:
       push_to_gcr: false
