--- a/.github/workflows/on-pull-requests.yml
+++ b/.github/workflows/on-pull-requests.yml
@@ -24,4 +24,5 @@ jobs:
     permissions:
       contents: read
       security-events: write
+      id-token: write # Required for Workload Identity Federation
     uses: ./.github/workflows/linting-and-tests.yml
