feat(WIP): get catalog + installation flow fully functional in desktop app

--- a/desktop_app/package.json
+++ b/desktop_app/package.json
@@ -64,6 +64,7 @@
     "@ai-sdk/anthropic": "^2.0.0",
     "@ai-sdk/openai": "^2.0.0",
     "@ai-sdk/react": "^2.0.0",
+    "@anthropic-ai/dxt": "^0.2.6",
     "@fastify/autoload": "^6.3.1",
     "@fastify/cors": "^11.1.0",
     "@fastify/http-proxy": "^11.3.0",
@@ -107,7 +108,6 @@
     "ollama": "^0.5.16",
     "ollama-ai-provider": "^1.2.0",
     "ollama-ai-provider-v2": "1.0.0-alpha.3",
-    "prettier-plugin-sort-imports": "^1.8.8",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
