--- a/desktop_app/tsconfig.json
+++ b/desktop_app/tsconfig.json
@@ -22,6 +22,7 @@
       "@backend/*": ["src/backend/*"],
       "@clients/*": ["src/clients/*"],
       "@archestra/types": ["src/types"],
+      "@schemas": ["src/schemas"],
       "@ui/*": ["src/ui/*"]
     }
   }
