--- a/desktop_app/package.json
+++ b/desktop_app/package.json
@@ -54,6 +54,7 @@
     "lint-staged": "^16.1.2",
     "pino-pretty": "^13.1.1",
     "prettier": "3.6.2",
+    "prettier-plugin-sort-imports": "^1.8.8",
     "tailwindcss": "^4.1.11",
     "tsx": "^4.20.3",
     "typescript": "~5.9.2",
@@ -102,6 +103,7 @@
     "electron-squirrel-startup": "^1.0.1",
     "fastify": "^5.4.0",
     "fastify-mcp": "^2.0.3",
+    "fastify-type-provider-zod": "^5.0.3",
     "get-port": "^7.1.0",
     "index.js": "link:@modelcontextprotocol/sdk/client/index.js",
     "lucide-react": "^0.536.0",
