--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,4 +7,6 @@
     "source.fixAll": "explicit",
     "source.organizeImports": "explicit"
   }
+  // "typescript.tsserver.maxTsServerMemory": 8000,
+  // "typescript.tsserver.nodePath": "node"
 }
