--- a/desktop_app/.prettierrc
+++ b/desktop_app/.prettierrc
@@ -9,7 +9,7 @@
   "tabWidth": 2,
   "importOrder": [
     "<THIRD_PARTY_MODULES>",
-    "^@(archestra\/types|archestra\/schemas|backend|clients|config|ui|schemas)(.*)$",
+    "^@(backend|clients|config|ui)(.*)$",
     "^[./](?!.*\\.(css|scss|sass|less|styl)$)",
     "^[./].*\\.(css|scss|sass|less|styl)$"
   ],
