--- a/desktop_app/tsconfig.json
+++ b/desktop_app/tsconfig.json
@@ -21,6 +21,7 @@
     "paths": {
       "@backend/*": ["src/backend/*"],
       "@clients/*": ["src/clients/*"],
+      "@archestra/types": ["src/types"],
       "@ui/*": ["src/ui/*"]
     }
   }
