--- a/desktop_app/tsconfig.json
+++ b/desktop_app/tsconfig.json
@@ -13,7 +13,7 @@
     "noImplicitAny": true,
     "sourceMap": true,
     "outDir": "dist",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "jsx": "react-jsx",
 
