--- a/desktop_app/tsconfig.json
+++ b/desktop_app/tsconfig.json
@@ -17,7 +17,7 @@
     "resolveJsonModule": true,
     "jsx": "react-jsx",
 
-    "types": ["vitest/globals"],
+    "types": ["vitest/globals", "vite/client"],
 
     /*
      Aliasing (added for shadcn/ui)
