--- a/desktop_app/package.json
+++ b/desktop_app/package.json
@@ -100,7 +100,7 @@
     "drizzle-zod": "^0.8.3",
     "electron-squirrel-startup": "^1.0.1",
     "fastify": "^5.4.0",
-    "fastify-mcp-server": "^0.4.1",
+    "fastify-mcp": "^2.0.3",
     "fastify-type-provider-zod": "^5.0.3",
     "get-port": "^7.1.0",
     "index.js": "link:@modelcontextprotocol/sdk/client/index.js",
