--- a/desktop_app/package.json
+++ b/desktop_app/package.json
@@ -30,6 +30,7 @@
     "@electron-forge/plugin-auto-unpack-natives": "^7.8.2",
     "@electron-forge/plugin-fuses": "^7.8.2",
     "@electron-forge/plugin-vite": "^7.8.2",
+    "@electron-forge/publisher-github": "^7.8.3",
     "@electron/fuses": "^2.0.0",
     "@electron/rebuild": "^4.0.1",
     "@hey-api/openapi-ts": "^0.80.1",
@@ -118,6 +119,7 @@
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.6",
     "undici": "^7.13.0",
+    "update-electron-app": "^3.1.1",
     "utf-8-validate": "^6.0.5",
     "uuid": "^11.1.0",
     "ws": "^8.18.3",
