fix: add google sdk

--- a/desktop_app/package.json
+++ b/desktop_app/package.json
@@ -61,6 +61,7 @@
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^2.0.0",
+    "@ai-sdk/google": "^2.0.3",
     "@ai-sdk/openai": "^2.0.0",
     "@ai-sdk/react": "^2.0.0",
     "@fastify/autoload": "^6.3.1",
