--- a/desktop_app/package.json
+++ b/desktop_app/package.json
@@ -45,6 +45,7 @@
     "@electron-forge/plugin-fuses": "^7.8.2",
     "@electron-forge/plugin-vite": "^7.8.2",
     "@electron-forge/publisher-github": "^7.8.3",
+    "@electron-forge/shared-types": "^7.8.3",
     "@electron/fuses": "^2.0.0",
     "@electron/rebuild": "^4.0.1",
     "@hey-api/openapi-ts": "^0.80.1",
@@ -104,6 +105,7 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@sentry/electron": "^6.9.0",
     "@shikijs/transformers": "^3.9.1",
     "@vitejs/plugin-react": "^4.7.0",
     "ai": "^5.0.0",
