--- a/desktop_app/package.json
+++ b/desktop_app/package.json
@@ -25,13 +25,14 @@
     "test": "vitest --config vite.main.config.ts",
     "prepare": "cd .. && husky desktop_app/.husky",
     "typecheck": "tsc --noEmit",
+    "prettier": "ELECTRON_RUN_AS_NODE=1 pnpm exec electron ./node_modules/prettier/bin/prettier.cjs --write .",
     "db:studio": "ELECTRON_RUN_AS_NODE=1 pnpm exec electron ./node_modules/drizzle-kit/bin.cjs studio",
     "db:push": "ELECTRON_RUN_AS_NODE=1 pnpm exec electron ./node_modules/drizzle-kit/bin.cjs push",
     "db:generate": "ELECTRON_RUN_AS_NODE=1 pnpm exec electron ./node_modules/drizzle-kit/bin.cjs generate",
     "db:migrate": "ELECTRON_RUN_AS_NODE=1 pnpm exec electron ./node_modules/drizzle-kit/bin.cjs migrate",
-    "codegen:all": "pnpm codegen:libpod && pnpm codegen:archestra:api && pnpm codegen:archestra:catalog",
+    "codegen:all": "pnpm codegen:libpod && pnpm codegen:archestra:api && pnpm codegen:archestra:catalog && pnpm prettier",
     "codegen:libpod": "ELECTRON_RUN_AS_NODE=1 pnpm exec electron ./node_modules/@hey-api/openapi-ts/bin/index.cjs --file openapi/libpod/openapi-ts.config.ts",
-    "codegen:archestra:api": "ELECTRON_RUN_AS_NODE=1 pnpm exec electron ./node_modules/tsx/dist/cli.mjs openapi/archestra/api/generate-openapi.ts && prettier --write ./openapi/archestra/api/openapi.json && ELECTRON_RUN_AS_NODE=1 pnpm exec electron ./node_modules/@hey-api/openapi-ts/bin/index.cjs --file openapi/archestra/api/openapi-ts.config.ts",
+    "codegen:archestra:api": "ELECTRON_RUN_AS_NODE=1 pnpm exec electron ./node_modules/tsx/dist/cli.mjs openapi/archestra/api/generate-openapi.ts && ELECTRON_RUN_AS_NODE=1 pnpm exec electron ./node_modules/@hey-api/openapi-ts/bin/index.cjs --file openapi/archestra/api/openapi-ts.config.ts",
     "codegen:archestra:catalog": "ELECTRON_RUN_AS_NODE=1 pnpm exec electron ./node_modules/@hey-api/openapi-ts/bin/index.cjs --file openapi/archestra/catalog/openapi-ts.config.ts"
   },
   "packageManager": "pnpm@10.14.0",
