--- a/.github/actions/setup-env/action.yml
+++ b/.github/actions/setup-env/action.yml
@@ -17,8 +17,11 @@ runs:
 
     - name: Install dependencies
       shell: bash
-      run: cd desktop_app && pnpm install --frozen-lockfile --prefer-offline
+      working-directory: desktop_app
+      run: pnpm install --frozen-lockfile --prefer-offline
 
     # This step is crucial for ensuring native modules are compiled against the correct Electron version.
     - name: Rebuild Electron native modules
+      shell: bash
+      working-directory: desktop_app
       run: pnpm electron-rebuild --force
