--- a/desktop_app/package.json
+++ b/desktop_app/package.json
@@ -22,9 +22,9 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "test": "vitest --config vite.main.config.ts",
     "prepare": "cd .. && husky desktop_app/.husky",
     "typecheck": "tsc --noEmit",
+    "test": "ELECTRON_RUN_AS_NODE=1 pnpm exec electron ./node_modules/vitest/dist/cli.js --config vite.main.config.ts",
     "prettier": "ELECTRON_RUN_AS_NODE=1 pnpm exec electron ./node_modules/prettier/bin/prettier.cjs --write .",
     "db:studio": "ELECTRON_RUN_AS_NODE=1 pnpm exec electron ./node_modules/drizzle-kit/bin.cjs studio",
     "db:push": "ELECTRON_RUN_AS_NODE=1 pnpm exec electron ./node_modules/drizzle-kit/bin.cjs push",
